--- a/css/style.css
+++ b/css/style.css
@@ -1148,6 +1148,12 @@ nav ul a:hover {
     visibility: hidden;
 }
 
+.shopMobile{
+display: none;
+}
+.shopMobileContent{
+    display: none;
+}
 @media(max-width: 1280px) {
     nav {
         padding: 0px 2% 0px 2%;
@@ -1178,6 +1184,51 @@ nav ul a:hover {
     }
 }
 @media(max-width: 992px) {
+
+    .shopMobile{
+        display: block !important;
+    }
+    .shopMobileContent{
+        display: block !important;
+    }
+    .closeMobileContent{
+        cursor: pointer;
+    }
+    .shopMobile{
+        position: fixed;
+        bottom: 0;
+        height: 56px;
+        text-align: center;
+        background-color: orange;
+        width: 100%;
+        z-index: 99;
+        color: white;
+        font-size: 24px;
+        line-height: 56px;
+        box-shadow: 0px -5px 10px -11px rgba(38,38,38,1);
+        
+    }
+    .shopMobileContent{
+        position: fixed;
+        height: 100%;
+        width: 100%;
+        background-color: white;
+        color: #000;
+        z-index: 98;
+        padding-top: 105px;
+        bottom: -100%;
+        transition: .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+
+    }
+    .showMobileContentShow{
+        bottom: 0;
+        transition: .7s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
+
+    .showMobileContentHide{
+        bottom: -100%;
+        transition: .5s cubic-bezier(0.075, 0.82, 0.165, 1);
+    }
 
     .slider .slides li img {
         width: 100%;
@@ -1296,6 +1347,7 @@ nav ul a:hover {
 }
 
 @media(max-width: 600px) {
+
     nav .brand-logo div {
         width: 185px;
         padding: 0px 0px 0px 0px;
